Alerta de resposta de Servico , e url apontada para producao

--- a/novoPresente.html
+++ b/novoPresente.html
@@ -43,7 +43,10 @@
     <section class="p-0" id="portfolio">
       <br/>
         <div class="container">
+
                 <hr/>
+                <div id = "alert_placeholder"></div>
+                
                 <form>
                       <div class="form-group row">
                         <label for="nome" class="col-sm-1 col-form-label">Produto</label>
